[package]
authors = ['adetante <antoine.detante@gmail.com>', 'fcroiseaux <fcroiseaux@gmail.com>']
edition = '2018'
license = 'Unlicense'
name = 'charger-service'
version = '1.0.0'

[dependencies]
anyhow = "1.0"
log = "0.4"
sp-externalities = { version = "0.9.0", default-features = false }
sp-runtime-interface = { version = '3.0.0', default-features = false }

[features]
default = ['std']
std = [

]