[package]
authors = ['adetante <antoine.detante@gmail.com>', 'fcroiseaux <fcroiseaux@gmail.com>']
build = 'build.rs'
description = 'A Substrate node for charging station.'
edition = '2018'
homepage = 'https://www.lumena.tech'
license = 'Unlicense'
name = 'charger-node'
repository = 'https://github.com/Delmonicos/charger-node/'
version = '3.0.0'

[[bin]]
name = 'charger-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = '3.0.0'

[dependencies]
log = "0.4"
hex-literal = "0.3.1"
structopt = '0.3.8'

# local dependencies
charger-node-runtime = { path = '../runtime', version = '3.0.0' }
charger-service = { path = '../charger-service', default-features = false }

# Substrate dependencies
frame-benchmarking = '3.0.0'
frame-benchmarking-cli = '3.0.0'
sc-cli = { features = ['wasmtime'], version = '0.9.0' }
sc-client-api = '3.0.0'
sc-consensus = '0.9.0'
sc-consensus-aura = '0.9.0'
sc-executor = { features = ['wasmtime'], version = '0.9.0' }
sc-finality-grandpa = '0.9.0'
sc-keystore = '3.0.0'
sc-service = { features = ['wasmtime'], version = '0.9.0' }
sc-transaction-pool = '3.0.0'
sp-consensus = '0.9.0'
sp-consensus-aura = '0.9.0'
sp-core = '3.0.0'
sp-finality-grandpa = '3.0.0'
sp-inherents = '3.0.0'
sp-runtime = '3.0.0'
sp-transaction-pool = '3.0.0'
pallet-contracts = '3.0.0'
sp-externalities = { version = "0.9.0", default-features = false }
sp-keystore = '0.9.0'

# These dependencies are used for the node's RPCs
jsonrpc-core = "15.1.0"
sc-rpc = '3.0.0'
sp-api = '3.0.0'
sc-rpc-api = '0.9.0'
sp-blockchain = '3.0.0'
sp-block-builder = '3.0.0'
sc-basic-authorship = '0.9.0'
substrate-frame-rpc-system = '3.0.0'
pallet-transaction-payment-rpc = '3.0.0'
pallet-contracts-rpc = '3.0.0'

[features]
default = []
runtime-benchmarks = ['charger-node-runtime/runtime-benchmarks']
