[package]
authors = ['adetante <antoine.detante@gmail.com>', 'fcroiseaux <fcroiseaux@gmail.com>']
description = 'FRAME payment pallet for Delmonicos'
edition = '2018'
license = 'Unlicense'
name = 'pallet-session-payment'
version = '1.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies]
frame-support = { default-features = false, version = '3.0.0' }
frame-system = { default-features = false, version = '3.0.0' }
pallet-timestamp = { default-features = false, version = '3.0.0' }
charger-service = { path = '../../charger-service', default-features = false }
sp-runtime = { default-features = false, version = '3.0.0' }
sp-core = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }
pallet-user-consent = { path = '../user-consent', default-features = false, version = '1.0.0' }
pallet-registrar = { path = '../registrar', default-features = false, version = '3.0.0' }


[dev-dependencies]
serde = { version = "1.0.119" }
sp-io = { default-features = false, version = '3.0.0' }
pallet-did = { git = 'https://github.com/Delmonicos/pallet-did', default-features = false}
hex-literal = "0.3.1"

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
]
