[package]
name = "session-payment-runtime-api"
version = "3.0.0"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
sp-api = { version = '3.0.0', default-features = false}
sp-std = { version = '3.0.0', default-features = false}


[dev-dependencies]
serde_json = "1.0.64"

[features]
default = ["std"]
std = [
    "sp-api/std",
    "sp-std/std",
]
